--- a/storage/libradb/Cargo.toml
+++ b/storage/libradb/Cargo.toml
@@ -20,6 +20,7 @@ num-traits = "0.2.12"
 proptest = { version = "0.10.1", optional = true }
 proptest-derive = { version = "0.2.0", optional = true }
 serde = "1.0.116"
+serde_json = "1.0.58"
 thiserror = "1.0.20"
 
 accumulator = { path = "../accumulator", version = "0.1.0" }
@@ -38,6 +39,7 @@ storage-interface = { path = "../storage-interface", version = "0.1.0" }
 tracing = { version="0.1" }
 tracing-attributes = "0.1.2"
 tracing-atrace = { path = "../../common/tracing", version = "0.1.0" }
+libatrace = { path = "../../common/libatrace", version = "0.1.0" }
 tracing-futures =  { version = "0.2.1", features = ["futures-01"] }
 
 [dev-dependencies]
