--- a/execution/executor/Cargo.toml
+++ b/execution/executor/Cargo.toml
@@ -32,8 +32,10 @@ libra-vm = { path = "../../language/libra-vm", version = "0.1.0" }
 libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
 scratchpad = { path = "../../storage/scratchpad", version = "0.1.0" }
 storage-interface = { path = "../../storage/storage-interface", version = "0.1.0" }
-
+tracing = { version="0.1" }
+tracing-atrace = { path = "../../common/tracing", version = "0.1.0" }
 proptest = { version = "0.10.1", optional = true }
+libatrace = { path = "../../common/libatrace", version = "0.1.0" }
 
 [dev-dependencies]
 proptest = "0.10.1"
